feat: web homepage/flowpage add background, flow operations bugs fix, task undo/redo, generate action quick select model
